Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-10998

Warmup tests fail with missing replica items post warmup

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 3.0
    • 3.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • Untriaged
    • Unknown

    Description

      test to repro :

      ./testrunner -i ~/imp_scripts/ini/simple-metaData.ini -t warmup.warmuptest.WarmUpTests.warmup_test,eviction_policy=fullEviction,stats_monitor=vb_replica_perc_mem_resident;vb_active_perc_mem_resident,items=20,dgm_run=True,is_partial=True

      Error:
      ======================================================================
      ERROR: warmup_test (warmup.warmuptest.WarmUpTests)
      ----------------------------------------------------------------------
      Traceback (most recent call last):
      File "pytests/warmup/warmuptest.py", line 245, in warmup_test
      raise Exception("Warmup check failed. Warmup test failed in some node")
      Exception: Warmup check failed. Warmup test failed in some node

      ----------------------------------------------------------------------

      Active items > Replica items, some replica items are always missing

      root@mulberry-s10718:/opt/couchbase/bin# ./cbstats 172.23.106.235:11211 -b default all | grep vb_replica
      vb_replica_curr_items: 2078
      vb_replica_eject: 0
      vb_replica_expired: 0
      vb_replica_ht_memory: 1606144
      vb_replica_itm_memory: 1735890
      vb_replica_meta_data_memory: 193890
      vb_replica_num: 64
      vb_replica_num_non_resident: 0
      vb_replica_ops_create: 2078
      vb_replica_ops_delete: 0
      vb_replica_ops_reject: 0
      vb_replica_ops_update: 2221
      vb_replica_perc_mem_resident: 400
      vb_replica_queue_age: 0
      vb_replica_queue_drain: 4299
      vb_replica_queue_fill: 4299
      vb_replica_queue_memory: 0
      vb_replica_queue_pending: 0
      vb_replica_queue_size: 0

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ketaki Ketaki Gangal (Inactive)
            ketaki Ketaki Gangal (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty