MB-10998: Pertaining to stat numTotalItems

- newCacheItem to be set to false, for items
loaded back during warmup

Change-Id: Ie781ad97f2c396cc6b48f2f7ad3eaa79409a5129
Reviewed-on: http://review.couchbase.org/36542
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: abhinav dangeti <abhinav@couchbase.com>